Fixed footer alignment and font size

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -145,6 +145,10 @@ footer {
   height: 10vh;
 }
 
+.nav-item {
+  font-size: 1.2rem !important;
+}
+
 .logo_image {
   width: 4rem;
   height: auto;
@@ -335,12 +339,12 @@ small {
   padding-right: 2em !important;
 }
 
-.nav-item {
-  font-size: 1.2rem !important;
-}
-
 .alert {
   margin-bottom: 0rem !important;
+}
+
+footer {
+  font-size: 1.1rem;
 }
 
 /*==============================================================================================*/
